[NMMA-130] nav item text wrap fix

--- a/docroot/themes/custom/boatshow/sass/components/_header.scss
+++ b/docroot/themes/custom/boatshow/sass/components/_header.scss
@@ -111,6 +111,8 @@
   & > ul > li[class*='button'] > a {
     @include button;
     font-size: $header-footer-button-font-size;
+    min-width: 0;
+    padding: 10px;
   }
 }
 
@@ -298,13 +300,12 @@
   }
 
   .header-bar {
-    flex: 25%;
+    flex-basis: 15%;
     padding: 0;
     border-bottom: 0;
   }
 
   .region-header {
-    flex: 75%;
     align-self: flex-end;
     display: flex;
     flex-direction: column;
@@ -338,11 +339,11 @@
     }
 
     & > ul > li {
-      transition: all $transition-speed $transition-style;
+      // transition: all $transition-speed $transition-style;
       margin-left: 40px;
 
       &:first-child {
-        margin-left: 40px;
+        // margin-left: 40px;
       }
     }
 
@@ -439,6 +440,14 @@
       &:hover {
         color: $color-links;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1100px)  {
+  [id="block-mainnavigationboatshow"] {
+    & > ul > li {
+      margin-left: 20px;
     }
   }
 }
